adding demo files

--- a/bt4.html
+++ b/bt4.html
@@ -12,7 +12,7 @@
             <th scope="col">Num</th>
             <th scope="col">First</th>
             <th scope="col">Last</th>
-            <th scope="col">Handle</th>
+            <th scope="col">EMAIL</th>
           </tr>
         </thead>
         <tbody>
